fixed bug in ext companion fetch_book_info: forgot to specify book id in slq for ext info row toggle_dl done (but changes wont show on webgui until restart due to being loaded from id_map)

--- a/extension/book_info_popup.html
+++ b/extension/book_info_popup.html
@@ -41,7 +41,7 @@
         </div>
         <div class="panel-list-item ext-info-data">
             <div class="text">Downloaded: <span id="Downloaded"></span>
-                <span id="toggle-dl" data-ei-id="" onclick="toggleDl(this);">Toggle</span>
+                <span id="toggle-dl" data-ei-id="">Toggle</span>
             </div>
         </div>
         <div class="panel-list-item ext-info-data">
