added way to set lists from extension

--- a/extension/book_info_popup.html
+++ b/extension/book_info_popup.html
@@ -17,7 +17,8 @@
   <div class="panel" id="data-wrapper">
     <div class="panel-section panel-section-list" id="book-info-data-container">
         <div class="panel-list-item book-data">
-            <div class="text">List: <span id="List"></span></div>
+            <div class="text">List: <input disabled id="List" placeholder="Type in lists separated by ';'" value=""></input>
+            </div>
         </div>
         <div class="panel-list-item book-data">
             <div class="text">Last Change: <span id="LastChange"></span></div>
