added fav toggle button to extension

--- a/extension/book_info_popup.html
+++ b/extension/book_info_popup.html
@@ -21,6 +21,11 @@
             </div>
         </div>
         <div class="panel-list-item book-data">
+            <div class="text">Favorite: <span id="Favorite"></span>
+                <span id="toggle-fav" class="toggle-button">Toggle</span>
+            </div>
+        </div>
+        <div class="panel-list-item book-data">
             <div class="text">Last Change: <span id="LastChange"></span></div>
         </div>
     </div>
@@ -42,7 +47,7 @@
         </div>
         <div class="panel-list-item ext-info-data">
             <div class="text">Downloaded: <span id="Downloaded"></span>
-                <span id="toggle-dl" data-ei-id="">Toggle</span>
+                <span id="toggle-dl" class="toggle-button" data-ei-id="">Toggle</span>
             </div>
         </div>
         <div class="panel-list-item ext-info-data">
