--- a/tests/threads_test_files/tsumino_43494_the-super-horny-workplace.html
+++ b/tests/threads_test_files/tsumino_43494_the-super-horny-workplace.html
@@ -5,8 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google" value="notranslate">
+<style type="text/css">
+        .ads, .adsf, .ads-large-only, .ads-small-only { text-align: center; }
+    </style>
 <title>The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界 | Tsumino </title>
-<meta name="description" content="View The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界 for free at Tsumino! Tags: Large Breasts, Blowjob, Full Color, Pantyhose, X-ray, Anal, Breast Sucking, Megane, Harem, Group Sex, Huge Penis, Deepthroat, Cunnilingus, Exhibitionism, Office Lady, Spitroast, Bukkake, Nakadashi, Leg Lock, Decensored, French Kissing">
+<meta name="description" content="View The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界 for free at Tsumino! Tags: Large Breasts, Blowjob, Full Color, Pantyhose, X-ray, Anal, Breast Sucking, Megane, Harem, Group Sex, Huge Penis, Deepthroat, Cunnilingus, Exhibitionism, Gangbang, Office Lady, Spitroast, Bukkake, Nakadashi, Leg Lock, Decensored, French Kissing">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-shim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.5.7/es5-sham.min.js"></script>
@@ -23,21 +26,20 @@
             };
         }
     </script>
-<meta property="og:type" content="website" />
-<meta property="og:title" content="View The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界 for free at Tsumino! Tags: Large Breasts, Blowjob, Full Color, Pantyhose, X-ray, Anal, Breast Sucking, Megane, Harem, Group Sex, Huge Penis, Deepthroat, Cunnilingus, Exhibitionism, Office Lady, Spitroast, Bukkake, Nakadashi, Leg Lock, Decensored, French Kissing" />
+<meta property="og:type" content="article" />
+<meta property="og:title" content="The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界" />
 <meta property="og:image" content="http://www.tsumino.com/Image/Thumb/43494" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content="@TsuminoStatus" />
-<meta name="twitter:creator" content="@TsuminoStatus" />
-<meta name="twitter:title" content="The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界">
-<meta name="twitter:description" content="View The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界 for free at Tsumino!">
-<meta name="twitter:url" content="/Book/Info/43494/the-super-horny-workplace?twitter=1" />
-<meta name="twitter:image" content="http://www.tsumino.com/Image/Thumb/43494" />
+<meta itemprop="name" content="The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界" />
+<meta itemprop="image" content="http://www.tsumino.com/Image/Thumb/43494" />
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:title" content="The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界" />
+<meta name="twitter:description" content="Anal, Blowjob, Breast Sucking, Bukkake, Cunnilingus, Decensored, Deepthroat, Exhibitionism, French Kissing, Full Color, Gangbang, Group Sex, Harem, Huge Penis, Large Breasts, Leg Lock, Megane, Nakadashi, Office Lady, Pantyhose, Spitroast, X-ray, Manga, MediBang!, ElectricSheep, Yuuki Tsumugi" />
+<meta name="description" content="View The Super Horny Workplace / エロすぎる会社日常にセックスが溶け込んだ世界 for free at Tsumino! Tags: Large Breasts, Blowjob, Full Color, Pantyhose, X-ray, Anal, Breast Sucking, Megane, Harem, Group Sex, Huge Penis, Deepthroat, Cunnilingus, Exhibitionism, Gangbang, Office Lady, Spitroast, Bukkake, Nakadashi, Leg Lock, Decensored, French Kissing" />
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="icon" type="image/png" href="/Content/img/fav-icon.png" />
 <meta name="tsumino-authenticated" content="False" />
-<link href="/bhome/css?v=cBEH2_6gezjmFsX15JXrkBVV_Y15QVOMopp1ITyXV6g1" rel="stylesheet" />
+<link href="/bhome/css?v=86aTSX9P6NdCfaoVARXetNv-fgwCkfQix8Xps8wfbY01" rel="stylesheet" />
 </head>
 <body>
 <nav class="tsumino-nav">
@@ -54,7 +56,8 @@
 <li><a href="/Tags">Tags</a></li>
 <li><a href="/Tags/Definitions">Definitions</a></li>
 </ul>
- </li>
+</li>
+<li><a href="/Videos">VIDEOS</a></li>
 <li><a href="/Forum">FORUM</a></li>
 <li><a href="/Browse/Random">RANDOM</a></li>
 <li><a href="/About/Chat">CHAT</a></li>
@@ -62,6 +65,7 @@
 <li class=""><a href="/About">ABOUT</a></li>
 </ul>
 <div class="tsumino-nav-right tsumino-search-button">
+<a href="https://twitter.com/TsuminoStatus"><i class="fa fa-twitter"></i></a>
 </div>
 </div>
 </nav>
@@ -69,7 +73,18 @@
 <div style="margin: 5px auto;">
 </div>
 <div class="book-page-container">
-<div id="ads"> </div>
+<div id="ads">
+<div class="ads-large-only">
+
+<ins id="717223" data-width="728" data-height="102"></ins>
+
+</div>
+<div class="ads-small-only">
+
+<ins id="717231" data-width="300" data-height="112"></ins>
+
+</div>
+</div>
 <div class="row row-no-margin">
 <div class="book-page-cover col-md-2 col-sm-12 col-no-padding">
 <a href="/Read/View/43494">
@@ -115,7 +130,7 @@ gezio
 <div class="book-line">
 <div class="book-info">Rating</div>
 <div class="book-data" id="Rating">
-4.35 (148 users / 1710 favs)
+4.3 (196 users / 2036 favs)
 </div>
 </div>
 <div class="book-line">
@@ -131,7 +146,7 @@ gezio
 Manga
 </a>
 </div>
- </div>
+</div>
 <div class="book-line">
 <div class="book-info">Group</div>
 <div class="book-data" id="Group">
@@ -183,6 +198,9 @@ French Kissing
 </a>
 <a data-id="7987" data-type="Tag" data-define="Full Color" data-original-title="" title="" class="book-tag" href="/Books#?Tag=Full+Color">
 Full Color
+</a>
+<a data-id="8043" data-type="Tag" data-define="Gangbang" data-original-title="" title="" class="book-tag" href="/Books#?Tag=Gangbang">
+Gangbang
 </a>
 <a data-id="8016" data-type="Tag" data-define="Group Sex" data-original-title="" title="" class="book-tag" href="/Books#?Tag=Group+Sex">
 Group Sex
@@ -241,6 +259,20 @@ BACK TO INDEX
 </div>
 </div>
 <div class="row row-no-margin">
+<div class="adsf">
+<div class="ads-large-only">
+
+<ins id="717224" data-width="728" data-height="102"></ins>
+
+</div>
+<div class="ads-small-only">
+
+<ins id="717232" data-width="300" data-height="112"></ins>
+
+</div>
+</div>
+</div>
+<div class="row row-no-margin">
 </div>
 <div class="row row-no-margin">
 <script id="templateGridVideo" type="mustache">
@@ -256,7 +288,7 @@ BACK TO INDEX
                         <div class="video-grid-item-details">
                             <div class="video-title">{{ title }}</div>
                             <div class="video-rating">{{ rating }} stars <i class="fa fa-star" aria-hidden="true"></i></div>
-                            <div class="video-duration">{{ duration }} seconds</div>
+                            <div class="video-duration">{{ duration }}</div>
                         </div>
                     </div>
                 </a>
@@ -365,7 +397,7 @@ BACK TO INDEX
     }
 
     function formatVideoImageUrl(id, page) {
-        var baseUrl = 'http://cdn1.tsumino.com/99999999/thumbnail.png';
+        var baseUrl = 'http://cdn.tsumino.com/99999999/thumbnail.png';
         return baseUrl.replace('99999999', id.toString())
             .replace('88888888', page.toString());
     }
@@ -406,7 +438,14 @@ BACK TO INDEX
             ret.groups = item.Groups;
             ret.collections = item.Collections;
             ret.favoriteCount = item.FavoriteCount;
-            ret.duration = item.Duration;
+
+
+            var minutes = Math.floor(item.Duration / 60);
+            var seconds = item.Duration - minutes * 60;
+            function pad(string,pad,length) {
+                return (new Array(length+1).join(pad)+string).slice(-length);
+            }
+            ret.duration = pad(minutes, '0', 2) + ':' + pad(seconds, '0', 2);;
 
             ret.hasHatedTag = (dataItem.Impression === BookImpression.Hate);
             ret.hasLovedTag = (dataItem.Impression === BookImpression.Love);
@@ -454,7 +493,7 @@ BACK TO INDEX
 </script>
 <ul class="tsumino-pills nav nav-pills nav-justified">
 <li role="presentation" class="active"><a data-toggle="pill" href="#tab-thumbnails">Thumbnails</a></li>
-<li role="presentation"><a data-toggle="pill" href="#tab-comments">Comments <span data-count-url="/Comment/Count/43494" id="commentCount"></span></a></li>
+<li role="presentation" id="liComments" class=""><a data-toggle="pill" href="#tab-comments">Comments <span data-count-url="/Comment/Count/43494" id="commentCount"></span></a></li>
 <li role="presentation"><a data-toggle="pill" href="#tab-related">Related</a></li>
 </ul>
 <div class="modal fade" id="commentsModal" role="dialog" tabindex="-1">
@@ -519,7 +558,7 @@ Take a quick peek before viewing
 Some suggestions for you to look at
 </div>
 <hr />
- </div>
+</div>
 <div id="related-container" data-template="templateGridBook" data-url="/Book/GetRelated/43494">
 </div>
 </div>
@@ -531,30 +570,19 @@ Some suggestions for you to look at
 </div>
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script src="/bhome/lib?v=mVFxDAHKFzervBffra3RVzMGLmGDBFI1qzxByDPFqKU1"></script>
-<script src="/bhome/mine?v=rXaP57ijZ6TD4e45sak2U4H2pgZpRRd8xtZ1gZGad5w1"></script>
+<script src="/bhome/mine?v=VpTLxMAtEz66RfW1VzYtXIs6I1D2UbjQCnOfte52XV01"></script>
 <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-69782994-1', 'auto');
-        ga('send', 'pageview');
-
-        $('#CaptchaInputText').addClass('form-control');
-    </script>
+    (function(i,s,o,r){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date()})(window,document,'script','ga');
+    ga('create', 'UA-69782994-1', 'auto');
+    ga('send', 'pageview');
+</script>
+<script src="https://ga.tsumino.com/analytics.js" async></script>
 
 <script type="text/javascript">
-        _atrk_opts = { atrk_acct: "ru+Im1akKd60N8", domain: "tsumino.com", dynamic: true };
-        (function () { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(as, s); })();
-    </script>
+    _atrk_opts = { atrk_acct: "ru+Im1akKd60N8", domain: "tsumino.com", dynamic: true };
+    (function () { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://d31qbv1cthcecs.cloudfront.net/atrk.js"; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(as, s); })();
+</script>
 <noscript><img src="https://d5nxst8fruw4z.cloudfront.net/atrk.gif?account=ru+Im1akKd60N8" style="display:none" height="1" width="1" alt="" /></noscript>
 
 <script type="text/javascript">
@@ -589,82 +617,27 @@ Some suggestions for you to look at
 
 </script>
 <script type="text/javascript">
+            $('ins').each(function() {
+                var zoneId = parseInt($(this).attr('id'), 10);
+                var zoneWidth = parseInt($(this).data('width'), 10);
+                var windowWidth = $(window).width();
 
+                var isZoneMobile = zoneWidth <= 727;
+                var isWindowMobile = windowWidth <= 727;
+                var isSame = isZoneMobile === isWindowMobile;
 
-(function(){
+                if (!isSame) {
+                    $(this).remove();
+                    return;
+                }
 
+                (adsbyjuicy = window.adsbyjuicy || []).push({ 'adzone': zoneId });
+            });
 
-   var html = '';
-   var isSearchPage = window.location.href.indexOf('/Books') > 0;
-   if(isSearchPage) {
-
-        // nov 3
-		html = '<div style="display: inline-block;"><iframe class="visible-xs-block" width="300" height="100" scrolling="no" frameborder="0" src="https://a.adtng.com/get/10000950?time=1538068935579" allowtransparency="true" marginheight="0" marginwidth="0" name="spot_id_10000950"></iframe> <iframe class="hidden-xs" width="728" height="90" scrolling="no" frameborder="0" src="https://a.adtng.com/get/10000949?time=1538068982264" allowtransparency="true" marginheight="0" marginwidth="0" name="spot_id_10000949"></iframe></div>';
-		$('#ads').prepend(html);
-
-
-		html = "<div class='ads-large-only'><iframe id='a14c17ee' name='a14c17ee' src='https://eki.trafficsan.com/server/www/uchi/sugoiafr.php?baka=13&zoneid=40&amp;cb={random}&amp;ct0={clickurl_enc}' frameborder='0' scrolling='no' width='728' height='90'><a href='http://eki.trafficsan.com/server/www/uchi/sugoick.php?n=acab2d1f&amp;cb={random}' target='_blank'><img src='http://eki.trafficsan.com/server/www/uchi/sugoiavw.php?zoneid=40&amp;cb={random}&amp;n=acab2d1f&amp;ct0={clickurl_enc}' border='0' alt='' /></a></iframe></div>";
-		$('#ads').prepend(html);
-		html = "<div class='ads-small-only'><iframe id='a17b100c' name='a17b100c' src='https://eki.trafficsan.com/server/www/uchi/sugoiafr.php?baka=13&zoneid=41&amp;cb={random}&amp;ct0={clickurl_enc}' frameborder='0' scrolling='no' width='300' height='100'><a href='http://eki.trafficsan.com/server/www/uchi/sugoick.php?n=a50f388d&amp;cb={random}' target='_blank'><img src='http://eki.trafficsan.com/server/www/uchi/sugoiavw.php?zoneid=41&amp;cb={random}&amp;n=a50f388d&amp;ct0={clickurl_enc}' border='0' alt='' /></a></iframe></div>"
-		$('#ads').prepend(html);
-
-		html = "<div class='ads-large-only'><iframe width='1000' height='250' scrolling='no' frameborder='0' src='https://a.adtng.com/get/10001026?time=1539359874401' allowtransparency='true' marginheight='0' marginwidth='0' name='spot_id_10001026'></iframe></div><div class='ads-small-only'><iframe width='300' height='250' scrolling='no' frameborder='0' src='https://a.adtng.com/get/10001027?time=1539359904726' allowtransparency='true' marginheight='0' marginwidth='0' name='spot_id_10001027'></iframe></div>";
-		$('#adsf').prepend(html);
-   }
-
-   var isBookPage = window.location.href.indexOf('/Info') > 0;
-   if (isBookPage) {
-		html = "<div class='ads-large-only'><iframe id='a5940237' name='a5940237' src='https://eki.trafficsan.com/server/www/uchi/sugoiafr.php?baka=13&zoneid=38&amp;cb={random}&amp;ct0={clickurl_enc}' frameborder='0' scrolling='no' width='728' height='90'><a href='http://eki.trafficsan.com/server/www/uchi/sugoick.php?n=ad06f93d&amp;cb={random}' target='_blank'><img src='http://eki.trafficsan.com/server/www/uchi/sugoiavw.php?zoneid=38&amp;cb={random}&amp;n=ad06f93d&amp;ct0={clickurl_enc}' border='0' alt='' /></a></iframe></div>";
-		$('#ads').prepend(html);
-		html = "<div class='ads-small-only'><iframe id='a158538a' name='a158538a' src='https://eki.trafficsan.com/server/www/uchi/sugoiafr.php?baka=13&zoneid=39&amp;cb={random}&amp;ct0={clickurl_enc}' frameborder='0' scrolling='no' width='300' height='100'><a href='http://eki.trafficsan.com/server/www/uchi/sugoick.php?n=a619746c&amp;cb={random}' target='_blank'><img src='http://eki.trafficsan.com/server/www/uchi/sugoiavw.php?zoneid=39&amp;cb={random}&amp;n=a619746c&amp;ct0={clickurl_enc}' border='0' alt='' /></a></iframe></div>"
-		$('#ads').prepend(html);
-   }
-})();
-
-
-</script>
-<style>
-		#ads { 
-			text-align: center;
-		}
-		
-		#ads iframe { 
-			max-width: 100%; 
-		}
-
-		#adsf { 
-			text-align: center;
-		}
-		
-		.ads-large-only { 
-			display: none;
-		}
-		
-		.ads-small-only { 
-			display: none;
-		}
-		
-		
-		@media only screen and (max-width: 719px) {
-			.ads-large-only {
-				display: none !important;
-			}
-			
-			.ads-small-only { 
-				display: block !important;
-			}
-		}
-  
-		
-		@media only screen and (min-width: 720px) {
-			.ads-large-only { 
-				display: block;
-			}
-			
-			.ads-small-only	 { 
-				display: none !important; 
-			}
-		}
-	</style>
+            $.getScript('https://adserver.juicyads.com/js/jads.js', function() { });
+        </script>
+
+<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=3464z2y4r234x2r2p264&u=http%3A%2F%2Fwww.juicyads.rocks"></script>
+
 </body>
 </html>
